# MultiAgentLearning

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  changelog.md  cleancode.sh  config.yaml  generateMultiRoverExperts.cpp  multiRoverExpertiseTesting.cpp  multiRoverIntrospection.cpp  testLapackInverse.cpp  testMAPElitesEigen.cpp  testMAPElitesRoverEigen.cpp  testMultiNightBar.cpp  testMultiRobotROS.cpp  testMultiRover.cpp  testMultiRoverPLearners.cpp  testNeuralNet.cpp  testNeuralNetEigen.cpp  testNeuroEvo.cpp  testNeuroEvoEigen.cpp  testPOMDP.cpp  testRover.cpp  testSearch.cpp  testSingleRover.cpp  testSingleRoverEigen.cpp  testWarehouse.cpp  test_torch.cpp  threadpool.cpp  threadpool.hpp
Domains/: postProcess.m  simReplay.m
Domains/Medium_SS/: capacities.csv  edges.csv  medium_warehouse.xml  origins_120.csv  vertices.csv
Domains/Min_SS/: capacities.csv  edges.csv  origins_40.csv  vertices_XY.csv
Domains/Small_120_AGVs_SS_intersection_no_time/: capacities.csv
Domains/Small_SS/: edges.csv  vertices_XY.csv
Domains/Tiny_SS/: capacities.csv  edges.csv  origins_70.csv  origins_90.csv  vertices_XY.csv
Results/plot/: convergence_time.py  plot.py  plot2.py  plot_vs.py  prepare data structs.sh  readme.md  stats
Results/plot/CCEA/C_120/: e102  e107  e110  e112  e113  e115  e117  e118  e123  e125  e135  e14  e145  e146  e148  e15  e152  e157  e158  e161  e162  e163  e165  e167  e169  e171  e172  e173  e174  e177  e178  e2  e20  e23  e25  e26  e28  e3  e31  e32  (+26 more)
Results/plot/CCEA/C_200/: e180  e181  e182  e183  e184  e185  e186  e187  e188  e189  e190  e191  e192  e193  e194  e195  e196  e197  e198  e199  e200  e201  e202  e203  e204  e205  e206  e207  e208  e209  e210  e211  e212  e213  e214  e215  e216  e217  e218  e219  (+140 more)
Results/plot/CCEA/C_400/: e0  e1  e10  e11  e12  e13  e14  e15  e16  e17  e18  e19  e2  e20  e21  e22  e23  e24  e25  e26  e27  e28  e29  e3  e4  e5  e6  e7  e8  e9
Results/plot/CCEA/C_90/: e360  e361  e362  e363  e364  e365  e366  e367  e368  e369  e370  e371  e372  e373  e374  e375  e376  e377  e378  e379  e380  e381  e382  e383  e384  e385  e386  e387  e388  e389  e390  e391  e392  e393  e394  e395  e396  e397  e398  e399  (+140 more)
Results/plot/CCEA/C_avgt_120/: e0  e1  e10  e11  e12  e13  e14  e15  e16  e17  e18  e19  e2  e20  e21  e22  e23  e24  e25  e26  e27  e28  e29  e3  e4  e5  e6  e7  e8  e9
Results/plot/CCEA/C_avgt_200/: e180  e181  e182  e183  e184  e185  e186  e187  e188  e189  e190  e191  e192  e193  e194  e195  e196  e197  e198  e199  e200  e201  e202  e203  e204  e205  e206  e207  e208  e209
Results/plot/CCEA/C_avgt_400/: e360  e361  e362  e363  e364  e365  e366  e367  e368  e369  e370  e371  e372  e373  e374  e375  e376  e377  e378  e379  e380  e381  e382  e383  e384  e385  e386  e387  e388  e389
Results/plot/CCEA/C_avgt_90/: e540  e541  e542  e543  e544  e545  e546  e547  e548  e549  e550  e551  e552  e553  e554  e555  e556  e557  e558  e559  e560  e561  e562  e563  e564  e565  e566  e567  e568  e569
Results/plot/CCEA/C_botht_120/: e30  e31  e32  e33  e34  e35  e36  e37  e38  e39  e40  e41  e42  e43  e44  e45  e46  e47  e48  e49  e50  e51  e52  e53  e54  e55  e56  e57  e58  e59
Results/plot/CCEA/C_botht_200/: e210  e211  e212  e213  e214  e215  e216  e217  e218  e219  e220  e221  e222  e223  e224  (+15 more)
Results/plot/ES/: plot.py  prepare data structs.sh
Results/plot/GA VS ES/: plot.py  prepare GA structs.sh
include/: CMakeLists.txt  README.md
include/Agents/: Agent.cpp  Agent.h  Agent.hpp  BarAgent.cpp  BarAgent.h  CMakeLists.txt  COMAAgent.cpp  COMAAgent.hpp  DDPGAgent.cpp  DDPGAgent.h  DDPGAgent.hpp  DQNAgent.cpp  DQNAgent.hpp  ESAgent.cpp  ESAgent.hpp  Intersection.h  Link.h  NeuroEvoAgent.cpp  NeuroEvoAgent.h  Rover.cpp  Rover.h  experience_replay.hpp  experience_replay_buffer.hpp  nn_modules.hpp
include/Domains/: AGV.cpp  AGV.h  AGV.hpp  Bar.h  CMakeLists.txt  MAPElitesRover.cpp  MAPElitesRover.h  MultiNightBar.cpp  MultiNightBar.h  MultiRover.cpp  MultiRover.h  SingleRover.cpp  SingleRover.h  Target.cpp  Target.h  Warehouse.cpp  Warehouse.h  Warehouse.hpp  WarehouseCentralised.cpp  WarehouseCentralised.h  WarehouseCentralisedTime.cpp  WarehouseCentralisedTime.h  WarehouseIntersections.cpp  WarehouseIntersections.h  WarehouseIntersectionsTime.cpp  WarehouseIntersectionsTime.h  WarehouseLinks.cpp  WarehouseLinks.h  WarehouseLinksTime.cpp  WarehouseLinksTime.h  Warehouse_COMA.cpp  Warehouse_COMA.hpp  Warehouse_DDPG.cpp  Warehouse_DDPG.h  Warehouse_DDPG.hpp  Warehouse_DDPG_merged_step.cpp  Warehouse_DDPG_merged_step.h  Warehouse_DQN.cpp  Warehouse_DQN.hpp  Warehouse_ES.cpp  (+5 more)
include/Learning/: CMakeLists.txt  GaussianProcess.h  MAPElites.cpp  MAPElites.h  NeuralNet.cpp  NeuralNet.h  NeuroEvo.cpp  NeuroEvo.h  dummy.cpp
include/POMDPs/: CMakeLists.txt  POMDP.cpp  POMDP.h  POMDPEnvironment.cpp  POMDPEnvironment.h  POMDPPolicy.cpp  POMDPPolicy.h  rover_3.policy  rover_3.pomdp  rover_4.policy  rover_4.pomdp  rover_5.policy  rover_5.pomdp  rover_6.policy  rover_6.pomdp  rover_alpha_vectors_3.policy  rover_alpha_vectors_4.policy  rover_alpha_vectors_5.policy  rover_alpha_vectors_6.policy  test.policy  test_edited.policy  userLevel01.pomdp
include/Planning/: CMakeLists.txt  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Queue.cpp  Queue.h  Search.cpp  Search.h
include/Utilities/: CMakeLists.txt  Utilities.cpp  Utilities.h
tests/: CMakeLists.txt  testSearch.cpp  test_random.cpp  test_search.cpp  test_torch.cpp
(+3087 files in other folders)
